--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,25 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>cloud-provider-payment8001</module>
+        <module>cloud-api-commons</module>
+    </modules>
+
 
     <!-- 统一管理jar包版本 -->
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+
+        <theproject.version>1.0-SNAPSHOT</theproject.version>
 
         <!--三个核心版本号-->
         <springboot.version>2.2.2.RELEASE</springboot.version>
         <springcloud.version>Hoxton.SR1</springcloud.version>
         <alibaba.cloud.version>2.1.0.RELEASE</alibaba.cloud.version>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
@@ -28,11 +36,21 @@
         <druid.version>1.1.16</druid.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
 
+
+
     </properties>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>com.mucf.springcloud</groupId>
+                <artifactId>cloud-api-commons</artifactId>
+                <version>${theproject.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
             <!--spring boot 2.2.2-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
