--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -11,6 +11,14 @@ spring:
     username: root
     password: 123456
 
+  #加上这个，保证修改了代码，应用不重启得同时加载类，节约时间
+  devtools:
+    restart:
+      enabled: false
+
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.atguigu.springcloud.entities
+
+#避免修改代码重启
