--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 8002
 
 spring:
   application:
@@ -29,14 +29,10 @@ eureka:
     fetchRegistry: true
     service-url:
       #单机版
-      defaultZone: http://eureka7001.com:7001/eureka
+      #defaultZone: http://eureka7001.com:7001/eureka
       # 集群版
-#      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
-  #添加之后，可 以在eureka那边看到这个名称，以示区分不同得提供者
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+  #添加之后，可以在eureka那边看到这个名称，以示区分不同得提供者
   instance:
-    instance-id: payment8001
+    instance-id: payment8002
     prefer-ip-address: true #访问路径可以显示ip地址
-    #Eureka客户端向服务端发送心跳的时间间隔，单位为秒(默认是30秒)
-    #lease-renewal-interval-in-seconds: 1
-    #Eureka服务端在收到最后一次心跳后等待时间上限，单位为秒(默认是90秒)，超时将剔除服务
-    #lease-expiration-duration-in-seconds: 2
