--- a/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-config-nacos-client3377/src/main/resources/bootstrap.yml
@@ -9,11 +9,12 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848 #Nacos服务注册中心地址
+        namespace: f910959b-4f86-4712-9f41-6c068f0ce3cb
       config:
         server-addr: localhost:8848 #Nacos作为配置中心地址
         file-extension: yaml #指定yaml格式的配置
-#        group: DEV_GROUP
-#        namespace: 7d8f0f5a-6a53-4785-9686-dd460158e5d4
+        group: DEVA_GROUP
+        namespace: f910959b-4f86-4712-9f41-6c068f0ce3cb
 
 
 # ${spring.application.name}-${spring.profile.active}.${spring.cloud.nacos.config.file-extension}
